--- a/releaseNotes/v0.5.1.md
+++ b/releaseNotes/v0.5.1.md
@@ -12,6 +12,19 @@
 
 ## Breaking Changes
 
+- **Namespace change**: All namespaces changed from `NetInteractor.Core` to `NetInteractor` for simplicity:
+  ```csharp
+  // Before (v0.5.0)
+  using NetInteractor.Core;
+  using NetInteractor.Core.Config;
+  using NetInteractor.Core.WebAccessors;
+  
+  // After (v0.5.1)
+  using NetInteractor;
+  using NetInteractor.Config;
+  using NetInteractor.WebAccessors;
+  ```
+
 - **Constructor change**: `InterationExecutor` no longer has a parameterless constructor. You must now pass an `IWebAccessor` instance:
   ```csharp
   // Before (v0.5.0)
